use commons base64 encoder instead of sun's